--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.488.0",
-    "next": "15.3.0",
+    "next": "^16.1.3",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "rehype": "^13.0.2",
     "rehype-autolink-headings": "^7.1.0",
